src/objects/Sub_Recipient_Entity__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City/State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entity_Type_Description__c</fullName>
        <formula>Entity_Type__r.Entity_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Type Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity Type</label>
        <referenceTo>Entity__c</referenceTo>
        <relationshipLabel>Sub Recipient Entities</relationshipLabel>
        <relationshipName>Sub_Recipient_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FY_End__c</fullName>
        <label>FY End</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <inlineHelpText>The Name of the person at the Entity</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reports_Website__c</fullName>
        <label>Reports Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>State_Entity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TXDOTId__c</fullName>
        <externalId>true</externalId>
        <label>TXDOTId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <label>Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor_Id__c</fullName>
        <label>Vendor Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Sub Recipient Entity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Entity__c</columns>
        <columns>Name__c</columns>
        <columns>Position__c</columns>
        <columns>Entity_Type_Description__c</columns>
        <columns>City__c</columns>
        <columns>Telephone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>City_Organizations</fullName>
        <columns>NAME</columns>
        <columns>Entity__c</columns>
        <columns>Name__c</columns>
        <columns>Position__c</columns>
        <columns>Entity_Type_Description__c</columns>
        <columns>City__c</columns>
        <columns>Telephone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entity_Type__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>City Organizations</label>
    </listViews>
    <listViews>
        <fullName>Council_of_Government_COG</fullName>
        <columns>NAME</columns>
        <columns>Entity__c</columns>
        <columns>Name__c</columns>
        <columns>Position__c</columns>
        <columns>Entity_Type_Description__c</columns>
        <columns>City__c</columns>
        <columns>Telephone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entity_Type__c</field>
            <operation>equals</operation>
            <value>5</value>
        </filters>
        <label>Council of Government (COG)</label>
    </listViews>
    <listViews>
        <fullName>County_Organizations</fullName>
        <columns>NAME</columns>
        <columns>Entity__c</columns>
        <columns>Name__c</columns>
        <columns>Position__c</columns>
        <columns>Entity_Type_Description__c</columns>
        <columns>City__c</columns>
        <columns>Telephone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entity_Type__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>County Organizations</label>
    </listViews>
    <listViews>
        <fullName>For_Profit_Entity_not_subject_to_Single</fullName>
        <columns>NAME</columns>
        <columns>Entity__c</columns>
        <columns>Name__c</columns>
        <columns>Position__c</columns>
        <columns>Entity_Type_Description__c</columns>
        <columns>City__c</columns>
        <columns>Telephone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entity_Type__c</field>
            <operation>equals</operation>
            <value>7</value>
        </filters>
        <label>For-Profit Entity (not subject to Single</label>
    </listViews>
    <listViews>
        <fullName>Metropolitan_Planning_Organization_MPO</fullName>
        <columns>NAME</columns>
        <columns>Entity__c</columns>
        <columns>Name__c</columns>
        <columns>Position__c</columns>
        <columns>Entity_Type_Description__c</columns>
        <columns>City__c</columns>
        <columns>Telephone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entity_Type__c</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <label>Metropolitan Planning Organization (MPO)</label>
    </listViews>
    <listViews>
        <fullName>Non_Profit_Entity</fullName>
        <columns>NAME</columns>
        <columns>Entity__c</columns>
        <columns>Name__c</columns>
        <columns>Position__c</columns>
        <columns>Entity_Type_Description__c</columns>
        <columns>City__c</columns>
        <columns>Telephone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entity_Type__c</field>
            <operation>equals</operation>
            <value>6</value>
        </filters>
        <label>Non-Profit Entity</label>
    </listViews>
    <listViews>
        <fullName>Non_Profit_Organizations</fullName>
        <columns>NAME</columns>
        <columns>Entity__c</columns>
        <columns>Name__c</columns>
        <columns>Position__c</columns>
        <columns>Entity_Type_Description__c</columns>
        <columns>City__c</columns>
        <columns>Telephone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entity_Type_Description__c</field>
            <operation>equals</operation>
            <value>Non-Profit Entity</value>
        </filters>
        <label>Non Profit Organizations</label>
    </listViews>
    <listViews>
        <fullName>Other_Organizations</fullName>
        <columns>NAME</columns>
        <columns>Entity__c</columns>
        <columns>Name__c</columns>
        <columns>Position__c</columns>
        <columns>Entity_Type_Description__c</columns>
        <columns>City__c</columns>
        <columns>Telephone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entity_Type__c</field>
            <operation>equals</operation>
            <value>9</value>
        </filters>
        <label>State of Texas Agency/University</label>
    </listViews>
    <listViews>
        <fullName>Other_Organizations2</fullName>
        <columns>NAME</columns>
        <columns>Entity__c</columns>
        <columns>Name__c</columns>
        <columns>Position__c</columns>
        <columns>Entity_Type_Description__c</columns>
        <columns>City__c</columns>
        <columns>Telephone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entity_Type__c</field>
            <operation>equals</operation>
            <value>8</value>
        </filters>
        <label>Other Organizations</label>
    </listViews>
    <listViews>
        <fullName>Regional_Mobility_Authority_RMA</fullName>
        <columns>NAME</columns>
        <columns>Entity__c</columns>
        <columns>Name__c</columns>
        <columns>Position__c</columns>
        <columns>Entity_Type_Description__c</columns>
        <columns>City__c</columns>
        <columns>Telephone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entity_Type__c</field>
            <operation>equals</operation>
            <value>4</value>
        </filters>
        <label>Regional Mobility Authority (RMA)</label>
    </listViews>
    <listViews>
        <fullName>Transit_District_Agency</fullName>
        <columns>NAME</columns>
        <columns>Entity__c</columns>
        <columns>Name__c</columns>
        <columns>Position__c</columns>
        <columns>Entity_Type_Description__c</columns>
        <columns>City__c</columns>
        <columns>Telephone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entity_Type__c</field>
            <operation>equals</operation>
            <value>10</value>
        </filters>
        <label>Transit District/Agency</label>
    </listViews>
    <nameField>
        <label>Sub Recipient Entity Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Recipient Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>